Added refreshToken functionality